--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>AlexCG Design | Suscribete</title>
+    <title>Pagina de prueba | Pablo</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
-<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
-<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
-<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
+
 
 <body>
     <header>
